--- a/index.html
+++ b/index.html
@@ -10,11 +10,475 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Step 7</title>
   </head>
   <body>
-<div class="container">     <h1>Hello</h1>
-</div>
-</body>
+    <section class="promo">
+      <div class="promo__header">
+        <div class="promo__logo"><img src="ico/mainlogo.svg" alt="" /></div>
+        <div class="promo__navigation">
+          <nav class="menu">
+            <ul class="menu_list">
+              <li class="menu_item"><a href="#">Home</a></li>
+              <li class="menu_item"><a href="#">Сделал</a></li>
+              <li class="menu_item"><a href="#">Ховер</a></li>
+              <li class="menu_item"><a href="#">About</a></li>
+              <li class="menu_item"><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="promo_subscribe">
+          <div class="subscribe">
+            <form action="" class="subscribe__form">
+              <input
+                class="subscribe__input promo__input"
+                type="email"
+                id="eml"
+                placeholder="Your email"
+              />
+              <button class="subscribe__btn btn btn--red promo__header-btn">
+                Subsribe
+              </button>
+            </form>
+          </div>
+        </div>
+        <div class="hamburger"><span></span><span></span><span></span></div>
+      </div>
+
+      <div class="promo__body">
+        <div class="promo__button-xs">
+          <button class="promo__btn-xs btn btn--blue">Try For Free</button>
+        </div>
+        <div class="promo__img"></div>
+        <div class="promo__info">
+          <div class="promo__info-wrapper">
+            <h1>We focus on ergonomics</h1>
+            <div class="promo__subtitle subtitle subtitle--white">
+              Очень долго мучался, что бы адаптировать этот 100vh))
+            </div>
+            <button class="promo__btn btn btn--blue">Try For Free</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="features">
+      <div class="container">
+        <div class="features__title">
+          <div class="suptitle suptitle--black features__suptitle">
+            At your fingertips
+          </div>
+          <h2 class="second-title second-title--black features__seond-title">
+            Features
+          </h2>
+          <div class="subtitle subtitle--black features__subtitle">
+            Most calendars are designed for teams.<br />
+            Slate is designed for freelancers
+          </div>
+        </div>
+        <div class="features__items">
+          <div class="features__item brdr">
+            <div class="features__item-header">
+              <div class="features__item-img">
+                <img src="ico/features/features1.png" alt="" />
+              </div>
+              <div class="features__item-heading">
+                The best products start with Sketch
+              </div>
+            </div>
+            <div class="features__item-text">
+              Slate helps you see how many more days you need to work to reach
+              your financial goal.
+            </div>
+          </div>
+          <div class="features__item ">
+            <div class="features__item-header">
+              <div class="features__item-img">
+                <img src="ico/features/features2.png" alt="" />
+              </div>
+              <div class="features__item-heading">Fastest way to organize</div>
+            </div>
+            <div class="features__item-text inf ">
+              Не ломается от разного количества текста. Можно заполнять как угодно. При адаптации меняют высоту согласно самой высокой карточки в ряду. Тут этого не видно но я знаю, что это частая ошибка новичков)) 
+            </div>
+          </div>
+          <div class="features__item">
+            <div class="features__item-header">
+              <div class="features__item-img">
+                <img src="ico/features/features3.png" alt="" />
+              </div>
+              <div class="features__item-heading">Work better together</div>
+            </div>
+            <div class="features__item-text">
+              Slate helps you see how many more days you need to work to reach
+              your financial goal. Slate helps you see how many more days you
+              need to work to reach your financial goal. Slate helps you see how
+              many more days you need to work to reach your financial goal.
+
+              Slate helps you see how many more days you need to work to reach
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="prototyping">
+      <div class="container">
+        <div class="prototyping__title">
+          <h2 class="second-title second-title--black prototyping__seond-title">
+            Lightning fast <br />prototyping
+          </h2>
+          <div class="subtitle subtitle--black prototyping__subtitle">
+            Most calendars are designed for teams.<br />
+            Slate is designed for freelancers
+          </div>
+        </div>
+        <button class="prototyping__btn btn btn--blue">Try For Free</button>
+        <div class="prototyping__mcbook">
+          <img src="img/macbook.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <section class="newsletter">
+      <div class="newsletter__title">
+        <div class="suptitle suptitle--white newsletter__suptitle">
+          At your fingertips
+        </div>
+        <h2 class="second-title second-title--white newsletter__seond-title">
+          Lightning fast prototyping
+        </h2>
+        <h2
+          class="second-title second-title--white newsletter__seond-title-mob"
+        >
+          Newsletter
+        </h2>
+      </div>
+      <div class="newsletter__text">
+        <span>Subscribe to our Newsletter</span>Available exclusivery on
+        Figmaland
+      </div>
+      <div class="subscribe newsletter__subscribe">
+        <form action="" class="subscribe__form">
+          <input
+            class="subscribe__input newsletter__input"
+            type="email"
+            id="eml"
+            placeholder="Your email"
+          />
+          <button class="subscribe__btn btn btn--red newsletter__header-btn">
+            Subsribe
+          </button>
+        </form>
+      </div>
+    </section>
+    <section class="partners">
+      <div class="container">
+        <div class="partners__title">
+          <h2 class="second-title second-title--black partners__seond-title">
+            Partners
+          </h2>
+          <div class="subtitle subtitle--black partners__subtitle">
+            Most calendars are designed for teams.<br />
+            Slate is designed for freelancers
+          </div>
+        </div>
+        <div class="partners__items">
+          <div class="partners__row">
+            <div class="partners__item">
+              <div class="partners__item-name">Client name</div>
+              <div class="partners__item-img">
+                <img src="ico/partners/logos_apiary.png" alt="" />
+              </div>
+              <div class="partners__item-text inf">
+                Три колонки на пк, Потом переходит в две колонки на плашетах, и
+                одна на мобилках в три итема остальные скрыты согласно макету.
+                При заполнении разным количеством текста не ломаются.
+              </div>
+            </div>
+            <div class="partners__item">
+              <div class="partners__item-name">Client name</div>
+              <div class="partners__item-img">
+                <img src="ico/partners/logos_android-icon.png" alt="" />
+              </div>
+              <div class="partners__item-text inf">
+                Анимации на ховерах только на пк версии. Картинка не по размеру тоже не сломает карточку.
+              </div>
+            </div>
+            <div class="partners__item">
+              <div class="partners__item-name">Client name</div>
+              <div class="partners__item-img">
+                <img src="ico/partners/logos_basecamp.png" alt="" />
+              </div>
+              <div class="partners__item-text">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </div>
+            </div>
+
+            <div class="partners__item xs-hide">
+              <div class="partners__item-name">Client name</div>
+              <div class="partners__item-img">
+                <img src="ico/partners/logos_basecamp.png" alt="" />
+              </div>
+              <div class="partners__item-text">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year. Slate helps you see
+                how many more days you need to work to reach your financial goal
+                for the month and yearSlate helps you see how many more days you
+                need to work to reach your financial goal for the month and year
+              </div>
+            </div>
+            <div class="partners__item xs-hide">
+              <div class="partners__item-name">Client name</div>
+              <div class="partners__item-img">
+                <img src="ico/partners/logos_airbnb.png" alt="" />
+              </div>
+              <div class="partners__item-text">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </div>
+            </div>
+            <div class="partners__item xs-hide">
+              <div class="partners__item-name">Client name</div>
+              <div class="partners__item-img">
+                <img src="ico/partners/logos_apple-app-store.png" alt="" />
+              </div>
+              <div class="partners__item-text">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </div>
+            </div>
+          </div>
+          <button class="partners__btn btn btn--blue">Try For Free</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="monero">
+      <div class="container">
+        <div class="monero__title">
+          <h2 class="second-title second-title--black monero__seond-title ">
+            Заголовок
+          </h2>
+        </div>
+        <div class="monero__wrapper">
+          <div class="subtitle subtitle--black monero__subtitle inf">
+            Подзаголовок. Немного сложнее блок с другого шаблона. Все адекватно
+            адаптивно под все устройства. Можно добавлять текст или блоки текста и оно не сломается. 
+          </div>
+          <div class="monero__items">
+            <div class="monero__item">
+              <div class="monero__item-header">Streamlined interface</div>
+              <div class="monero__item-text">
+                Send, receive, and manage accounts. That’s enough for many use
+                cases, and the wallet offers a way to keep things this simple
+              </div>
+            </div>
+            <div class="monero__item">
+              <div class="monero__item-header">Private by default</div>
+              <div class="monero__item-text">
+                Everything is designed to protect your financial privacy
+                wherever possible. No need to configure anything or understand
+                how it all works (although that’s always better).
+              </div>
+            </div>
+            <div class="monero__item">
+              <div class="monero__item-header">Quick start</div>
+              <div class="monero__item-text">
+                Choose bootstrap mode to quickly initalize your wallet while the
+                full blockchain is downloaded in the background. A good mix of
+                convenience and privacy.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="monero__title">
+          <h2 class="second-title second-title--black monero__seond-title">
+            For power use
+          </h2>
+        </div>
+        <div class="monero__wrapper">
+          <div class="subtitle subtitle--black monero__subtitle">
+            All the features you expect from a desktop cryptocurrency wallet.
+          </div>
+          <div class="monero__items">
+            <div class="monero__item">
+              <div class="monero__item-header">Mining</div>
+              <div class="monero__item-text">
+                Send, receive, and manage accounts. That’s enough for many use
+                cases, and the wallet offers a way to keep things this simple
+              </div>
+            </div>
+            <div class="monero__item">
+              <div class="monero__item-header">Prove & check</div>
+              <div class="monero__item-text">
+                Everything is designed to protect your financial privacy
+                wherever possible. No need to configure anything or understand
+                how it all works (although that’s always better).
+              </div>
+            </div>
+            <div class="monero__item">
+              <div class="monero__item-header">Shared RingDB</div>
+              <div class="monero__item-text">
+                A convenient way to secuurely communicate with others.
+              </div>
+            </div>
+            <div class="monero__item">
+              <div class="monero__item-header">Sign & verify</div>
+              <div class="monero__item-text">
+                Choose bootstrap mode to quickly initalize your wallet while the
+                full blockchain is downloaded in the background. A good mix of
+                convenience and privacy.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="pricing">
+      <div class="container">
+        <div class="pricing__title">
+          <h2 class="second-title second-title--black pricing__seond-title">
+            Pricing
+          </h2>
+          <div class="subtitle subtitle--black pricing__subtitle">
+            Most calendars are designed for teams.<br />
+            Slate is designed for freelancers
+          </div>
+        </div>
+        <div class="pricing__items">
+          <div class="pricing__item">
+            <div class="pricing__item-header">
+              <span>Free</span>Organize across all apps by hand
+            </div>
+            <div class="pricing__item-price"><span>0</span></div>
+            <button class="pricing__item-btn btn btn--blue">Order Now</button>
+          </div>
+
+          <div class="pricing__item">
+            <div class="pricing__item-header inf">
+              <span>HOVER</span> работает только на пк.
+            </div>
+            <div class="pricing__item-price"><span>10</span></div>
+            <button class="pricing__item-btn btn btn--blue">Order Now</button>
+          </div>
+          <div class="pricing__item">
+            <div class="pricing__item-header">
+              <span>BUSINESS</span>Organize across all apps by hand
+            </div>
+            <div class="pricing__item-price"><span>99</span></div>
+            <button class="pricing__item-btn btn btn--blue">Order Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contact">
+      <div class="container">
+        <div class="contact__title">
+          <h2 class="second-title second-title--white contact__seond-title">
+            Contact Us
+          </h2>
+          <div class="subtitle subtitle--white contact__subtitle">
+            Most calendars are designed for teams.<br />
+            Slate is designed for freelancers
+          </div>
+        </div>
+        <div class="contact__row">
+          <div class="contact__form">
+            <form action="#" class="message">
+              <input
+                type="text"
+                name=""
+                id=""
+                class="message__name"
+                placeholder="Your Name"
+              />
+              <input
+                type="email"
+                name=""
+                id=""
+                class="message__email"
+                placeholder="Your email"
+              />
+              <textarea
+                placeholder="Ненавижу формы. Никак не могу их выучить потому что это слишком скушно"
+                name=""
+                id=""
+                cols="30"
+                rows="10"
+                class="message__text"
+              ></textarea>
+              <button class="message__btn btn btn--red">Send</button>
+            </form>
+          </div>
+          <div class="contact__info-wrapper contacts">
+            <div class="contacts__info">
+              <div class="contacts__adress">
+                6386 Spring St undefined Anchorage, Georgia 12473 United States
+              </div>
+              <div class="contacts__phone">
+                <a href="tel:1234567890">(843) 555-0130</a>
+              </div>
+              <div class="contacts__mail">
+                <a href="mailto: abc@example.com"
+                  >willie.jennings@example.com</a
+                >
+              </div>
+            </div>
+            <div class="contacts__social">
+              <div class="contacts__twitter">
+                <a href="#"><img src="ico/footer/twitter.png" alt="" /></a>
+              </div>
+              <div class="contacts__facebook">
+                <a href="#"><img src="ico/footer/facebook.png" alt="" /></a>
+              </div>
+              <div class="contacts__in">
+                <a href="#"><img src="ico/footer/linked.png" alt="" /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="footer">
+      <div class="container footer__wrapper">
+        <div class="footer__pages">
+          Тут ховер
+          <ul>
+            <li><a href="#">Eleanor Edwards</a></li>
+            <li><a href="#">Ted Robertson</a></li>
+            <li><a href="#">Annette Russell</a></li>
+            <li><a href="#">Jennie Mckinney</a></li>
+            <li><a href="#">Gloria Richards</a></li>
+          </ul>
+        </div>
+        <div class="footer__map"><img src="img/map.jpg" alt="" /></div>
+
+        <div class="footer__info-wrapper contacts">
+          <div class="contacts__info">
+            <div class="contacts__adress">
+              6386 Spring St undefined Anchorage, Georgia 12473 United States
+            </div>
+            <div class="contacts__phone">
+              <a href="tel:1234567890">(843) 555-0130</a>
+            </div>
+            <div class="contacts__mail">
+              <a href="mailto: abc@example.com">willie.jennings@example.com</a>
+            </div>
+          </div>
+          <div class="contacts__social">
+            <div class="contacts__twitter">
+              <a href="#"><img src="ico/footer/twitter.png" alt="" /></a>
+            </div>
+            <div class="contacts__facebook">
+              <a href="#"><img src="ico/footer/facebook.png" alt="" /></a>
+            </div>
+            <div class="contacts__in">
+              <a href="#"><img src="ico/footer/linked.png" alt="" /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="js/script.js"></script>
+  </body>
 </html>
