--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <nav class="menu">
             <ul class="menu_list">
               <li class="menu_item"><a href="#">Home</a></li>
-              <li class="menu_item"><a href="#">Сделал</a></li>
-              <li class="menu_item"><a href="#">Ховер</a></li>
+              <li class="menu_item"><a href="#">About</a></li>
+              <li class="menu_item"><a href="#">Info</a></li>
               <li class="menu_item"><a href="#">About</a></li>
               <li class="menu_item"><a href="#">Contact</a></li>
             </ul>
@@ -55,7 +55,7 @@
           <div class="promo__info-wrapper">
             <h1>We focus on ergonomics</h1>
             <div class="promo__subtitle subtitle subtitle--white">
-              Очень долго мучался, что бы адаптировать этот 100vh))
+              Верстка 100vh экрана
             </div>
             <button class="promo__btn btn btn--blue">Try For Free</button>
           </div>
@@ -91,15 +91,18 @@
               your financial goal.
             </div>
           </div>
-          <div class="features__item ">
+          <div class="features__item">
             <div class="features__item-header">
               <div class="features__item-img">
                 <img src="ico/features/features2.png" alt="" />
               </div>
               <div class="features__item-heading">Fastest way to organize</div>
             </div>
-            <div class="features__item-text inf ">
-              Не ломается от разного количества текста. Можно заполнять как угодно. При адаптации меняют высоту согласно самой высокой карточки в ряду. Тут этого не видно но я знаю, что это частая ошибка новичков)) 
+            <div class="features__item-text inf">
+              Не ломается от разного количества текста. Можно заполнять как
+              угодно. При адаптации меняют высоту согласно самой высокой
+              карточки в ряду. Тут этого не видно но я знаю, что это частая
+              ошибка новичков))
             </div>
           </div>
           <div class="features__item">
@@ -114,7 +117,6 @@
               your financial goal. Slate helps you see how many more days you
               need to work to reach your financial goal. Slate helps you see how
               many more days you need to work to reach your financial goal.
-
               Slate helps you see how many more days you need to work to reach
             </div>
           </div>
@@ -200,7 +202,8 @@
                 <img src="ico/partners/logos_android-icon.png" alt="" />
               </div>
               <div class="partners__item-text inf">
-                Анимации на ховерах только на пк версии. Картинка не по размеру тоже не сломает карточку.
+                Анимации на ховерах только на пк версии. Картинка не по размеру
+                тоже не сломает карточку.
               </div>
             </div>
             <div class="partners__item">
@@ -256,14 +259,15 @@
     <section class="monero">
       <div class="container">
         <div class="monero__title">
-          <h2 class="second-title second-title--black monero__seond-title ">
+          <h2 class="second-title second-title--black monero__seond-title">
             Заголовок
           </h2>
         </div>
         <div class="monero__wrapper">
           <div class="subtitle subtitle--black monero__subtitle inf">
             Подзаголовок. Немного сложнее блок с другого шаблона. Все адекватно
-            адаптивно под все устройства. Можно добавлять текст или блоки текста и оно не сломается. 
+            адаптивно под все устройства. Можно добавлять текст или блоки текста
+            и оно не сломается.
           </div>
           <div class="monero__items">
             <div class="monero__item">
@@ -400,7 +404,7 @@
                 placeholder="Your email"
               />
               <textarea
-                placeholder="Ненавижу формы. Никак не могу их выучить потому что это слишком скушно"
+                placeholder="Текст"
                 name=""
                 id=""
                 cols="30"
